crates/rspack_error/tests/fixtures/ts_syntax_error/fixtures__ts_syntax_error.snap
---
source: crates/rspack_error/tests/fixtures.rs
expression: ts_syntax_error
---
error[typescript]: Typescript parsing error
  ┌─ tests/fixtures/ts_syntax_error/index.ts:5:5
  │
1 │ const CONST = 9000 % 2;
2 │ const enum D {
3 │     // Comma is required, but parser can recover because of the newline.
4 │     d = 10
5 │     g = CONST
  │     ^ Expected ',', got 'g'
6 │ }


